// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipContent 2 conditions 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      Is not empty / not null
    </li>
    <li
      class="item"
    >
      Less than (&lt;): 1000
    </li>
  </ul>
</div>
`;

exports[`TooltipContent 6 conditions 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      Is not empty / not null
    </li>
    <li
      class="item"
    >
      Less than (&lt;): 1000
    </li>
    <li
      class="item"
    >
      Greater than (&gt;): 10
    </li>
    <li
      class="item"
    >
      Not equal to (≠): 11
    </li>
    <li
      class="item"
    >
      Not equal to (≠): 50
    </li>
    <li
      class="item"
    >
      And 1 other...
    </li>
  </ul>
</div>
`;

exports[`TooltipContent 8 conditions 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      Is not empty / not null
    </li>
    <li
      class="item"
    >
      Less than (&lt;): 1000
    </li>
    <li
      class="item"
    >
      Greater than (&gt;): 10
    </li>
    <li
      class="item"
    >
      Not equal to (≠): 11
    </li>
    <li
      class="item"
    >
      Not equal to (≠): 50
    </li>
    <li
      class="item"
    >
      And 3 others...
    </li>
  </ul>
</div>
`;

exports[`TooltipContent COGS 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      COGS item 1
    </li>
    <li
      class="item"
    >
      COGS item 2
    </li>
  </ul>
</div>
`;

exports[`TooltipContent legendset with options chosen 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      0 - 4
    </li>
    <li
      class="item"
    >
      5 - 14
    </li>
  </ul>
</div>
`;

exports[`TooltipContent legendset without options chosen 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      Legend set name
    </li>
  </ul>
</div>
`;

exports[`TooltipContent no conditions 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      Showing all values for this dimension
    </li>
  </ul>
</div>
`;

exports[`TooltipContent no ou selected 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      None selected
    </li>
  </ul>
</div>
`;

exports[`TooltipContent no period selected 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      None selected
    </li>
  </ul>
</div>
`;

exports[`TooltipContent ou and level 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      OU Equestria
    </li>
    <li
      class="item"
    >
      Levels: Evertree forest
    </li>
  </ul>
</div>
`;

exports[`TooltipContent ou id and 3 ou groups 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      OU Equestria
    </li>
    <li
      class="item"
    >
      Groups: All the blue ponies, All the yellow ponies, All the purple ponies
    </li>
  </ul>
</div>
`;

exports[`TooltipContent ou with missing metadata 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      equestriaOuId
    </li>
    <li
      class="item"
    >
      Levels: evertreeForestId
    </li>
  </ul>
</div>
`;

exports[`TooltipContent period selected 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      May 2022
    </li>
    <li
      class="item"
    >
      July 2022
    </li>
  </ul>
</div>
`;

exports[`TooltipContent return null when at least one item is missing a name 1`] = `
<div>
  <ul
    class="list"
  />
</div>
`;

exports[`TooltipContent with stage 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      Program stage: The first stage
    </li>
    <li
      class="item"
    >
      Greater than (&gt;): 11
    </li>
  </ul>
</div>
`;
